{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 13,
  "lineage": "613f886a-5b5d-b994-26fa-686f9bbd0f25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06450698e1595a529",
            "association_id": "eipassoc-07073cf9a98fe2e5e",
            "domain": "vpc",
            "id": "eipalloc-06450698e1595a529",
            "instance": "i-077b800a280996058",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04a271df3d9495bb0",
            "private_dns": "ip-10-0-0-120.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.120",
            "public_dns": "ec2-35-74-32-103.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.32.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test_demo",
            "aws_security_group.test_demo",
            "aws_subnet.test_demo",
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03dceaabddff8067e",
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:instance/i-077b800a280996058",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077b800a280996058",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a271df3d9495bb0",
            "private_dns": "ip-10-0-0-120.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d619cd2cf224183",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006d6da9de819f82d",
            "tags": {
              "Name": "test-demo-ec2"
            },
            "tags_all": {
              "Name": "test-demo-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b96bdd86b06646b"
            ]
          },
          "dependencies": [
            "aws_security_group.test_demo",
            "aws_subnet.test_demo",
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:internet-gateway/igw-0520744276606458b",
            "id": "igw-0520744276606458b",
            "owner_id": "075140246822",
            "tags": {
              "Name": "test-demo-igw"
            },
            "tags_all": {
              "Name": "test-demo-igw"
            },
            "vpc_id": "vpc-0669174c55b27b1e7"
          },
          "dependencies": [
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:route-table/rtb-034eeacd82f9874fb",
            "id": "rtb-034eeacd82f9874fb",
            "owner_id": "075140246822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0520744276606458b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-demo-public-rt"
            },
            "tags_all": {
              "Name": "test-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0669174c55b27b1e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_demo",
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d46a0543be7a18",
            "route_table_id": "rtb-034eeacd82f9874fb",
            "subnet_id": "subnet-006d6da9de819f82d"
          },
          "dependencies": [
            "aws_internet_gateway.test_demo",
            "aws_route_table.test_demo",
            "aws_subnet.test_demo",
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:security-group/sg-08b96bdd86b06646b",
            "description": "For EC2 Linux",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b96bdd86b06646b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test_demo",
            "name_prefix": "",
            "owner_id": "075140246822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-demo"
            },
            "tags_all": {
              "Name": "test-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0669174c55b27b1e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:subnet/subnet-006d6da9de819f82d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d6da9de819f82d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075140246822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-demo-subnet"
            },
            "tags_all": {
              "Name": "test-demo-subnet"
            },
            "vpc_id": "vpc-0669174c55b27b1e7"
          },
          "dependencies": [
            "aws_vpc.test_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:075140246822:vpc/vpc-0669174c55b27b1e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ecc391ed2486cae3",
            "default_route_table_id": "rtb-000d024dcdf95973f",
            "default_security_group_id": "sg-07a2adc4083724ea9",
            "dhcp_options_id": "dopt-0e5c2e9c6247ac9c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0669174c55b27b1e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000d024dcdf95973f",
            "owner_id": "075140246822",
            "tags": {
              "Name": "test-demo-vpc"
            },
            "tags_all": {
              "Name": "test-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}